--- a/chirp-chirp/src/main/resources/application.properties
+++ b/chirp-chirp/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.datasource.url=jdbc:postgresql://localhost/chirp
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.generate-ddl=true
