Add spring security, in memory autentification

--- a/chirp-chirp/src/main/resources/application.properties
+++ b/chirp-chirp/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=jdbc:postgresql://localhost/chirp
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
+
+#Property for using CSRF with mustache
+spring.mustache.expose-request-attributes=true
+
+#Property to remove "Using generated security password"
+#security.basic.enabled=false
