--- a/chirp-chirp/src/main/resources/application.properties
+++ b/chirp-chirp/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 
-#Property for using CSRF with mustache
-spring.mustache.expose-request-attributes=true
+#Property for using CSRF with freemarker
+spring.freemarker.expose-request-attributes=true
 
 #Property to remove "Using generated security password"
 #security.basic.enabled=false
