Feature: Add picture to message

--- a/chirp-chirp/src/main/resources/application.properties
+++ b/chirp-chirp/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.freemarker.expose-request-attributes=true
 
 #Property to remove "Using generated security password"
 #security.basic.enabled=false
+
+upload.path=/Users/vitaly/dev/chirp-chirp/uploads
